--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-		<title>bootstrap仿写</title>
+		<title>麦子学院</title>
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-change.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/animate.css">
